fixing some things
