# service/api/api-handler.go
@@ -15,6 +15,7 @@ func (rt *APIRouter) Handler() http.Handler {
 	// conversation operations
 	rt.router.GET("/conversations", rt.authMiddleware(rt.conversations))
 	rt.router.GET("/conversations/:id", rt.authMiddleware(rt.getConversation))
+	rt.router.POST("/conversations/:id", rt.authMiddleware(rt.sendMessage))
 
 	return rt.router
 }
